src/objects/pse_Idea__c.object
<CustomObject>
    <fields>
        <fullName>pse_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Approver_22__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Approver_33__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FInance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>pse_Category__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_CreatorSmallPhotoUrl__c</fullName>
        <label>CreatorSmallPhotoUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse_Idea_Age__c</fullName>
        <formula>(ROUND(Now () - CreatedDate,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idea Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_Idea_Body__c</fullName>
        <label>Idea Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse_Number_of_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Comments and Posts attached to an idea via the feed.</description>
        <inlineHelpText>Number of Comments and Posts attached to an idea via the feed.</inlineHelpText>
        <label>Number of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_Pain_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pain point, if any, to be solved by this idea.</description>
        <inlineHelpText>Pain point, if any, to be solved by this idea.</inlineHelpText>
        <label>Pain Point</label>
        <referenceTo>pse_Pain_Point__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Score__c</fullName>
        <formula>IMAGE( CASE( pse_Number_of_Comments__c  , 1, &quot;/img/samples/stars_100.gif&quot;, 2, &quot;/img/samples/stars_200.gif&quot;, 3, &quot;/img/samples/stars_300.gif&quot;, 4, &quot;/img/samples/stars_400.gif&quot;, 5, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;), &quot;number of comments&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration by Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Mode</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName  &amp; &quot; &quot;&amp; CreatedBy.LastName &amp; &quot; on &quot; &amp;  TEXT(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse_VotesDown__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Votes Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_VotesUp__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Votes Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Idea</label>
    <nameField>
        <displayFormat>IDEA-{0000}</displayFormat>
        <label>Idea Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>